syntax = "proto3";
// package内容格式推荐为trpc.{app}.{server}，以trpc为固定前缀，标识这是一个trpc服务协议，app为你的应用名，server为你的服务进程名
package trpc.houjichao.demo;
// 注意：这里go_package指定的是协议生成文件pb.go在git上的地址，不要和上面的服务的git仓库地址一样
option go_package="github.com/houjichao/trpcprotocol";
// 定义服务接口
service Greeter {
  rpc SayHello (HelloRequest) returns (HelloReply) {}

  rpc Demo1 (HelloRequest) returns (HelloReply) {}
}

// 定义服务接口，一个server（服务进程）可以有多个service（对rpc逻辑分组），一般是一个server一个service，一个service中可以有多个rpc调用。
service Demo1 {
  rpc Demo1 (HelloRequest) returns (HelloReply) {}
}

// 请求参数
message HelloRequest {
  string msg = 1;
}
// 响应参数
message HelloReply {
  string msg = 1;
}
